[gd_scene load_steps=4 format=3 uid="uid://dg4rqw2eninrm"]

[ext_resource type="Script" path="res://score_board.gd" id="1_4kq82"]
[ext_resource type="Texture2D" uid="uid://c2rxa7guugp6q" path="res://Assets/score-board.png" id="1_th2pn"]
[ext_resource type="FontFile" uid="uid://cue5jsjwp7yi0" path="res://Assets/monogram.ttf" id="3_i7oly"]

[node name="ScoreBoard" type="Node2D"]
position = Vector2(29, 8)
script = ExtResource("1_4kq82")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_th2pn")

[node name="ScoreKeeper" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -16.0
offset_right = -53.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Sprite2D/ScoreKeeper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="player1_score" type="Label" parent="Sprite2D/ScoreKeeper/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_i7oly")
text = "0"
horizontal_alignment = 1

[node name="player2_score" type="Label" parent="Sprite2D/ScoreKeeper/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_i7oly")
text = "0"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Sprite2D/ScoreKeeper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="player1_set_count" type="Label" parent="Sprite2D/ScoreKeeper/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_i7oly")
text = "0"
horizontal_alignment = 1

[node name="player2_set_count" type="Label" parent="Sprite2D/ScoreKeeper/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_i7oly")
text = "0"
horizontal_alignment = 1
